--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -8,21 +8,21 @@
         <div class="bg-white shadow-sm rounded-lg h-fit">
           <nav class="p-4 space-y-2">
             <%= link_to site_documents_path(@site, status: ''), class: "flex items-center justify-between p-2 text-gray-700 hover:bg-gray-50 rounded #{params[:status].blank? ? 'bg-gray-100' : ''}" do %>
-              <div class="flex items-center">
+              <div class="flex items-center <%= "text-primary" if params[:status].blank? %>">
                 <i class="fas fa-inbox w-5"></i>
-                <span class="ml-2">Backlog</span>
+                <span class="ml-2 ">Backlog</span>
               </div>
               <span class="bg-gray-100 text-gray-600 py-0.5 px-2 rounded-full text-xs"><%= short_number @site.documents.by_status('').count %></span>
             <% end %>
             <%= link_to site_documents_path(@site, status: 'in_review'), class: "flex items-center justify-between p-2 text-gray-700 hover:bg-gray-50 rounded #{params[:status] == 'in_review' ? 'bg-gray-100' : ''}" do %>
-              <div class="flex items-center">
+              <div class="flex items-center <%= "text-primary" if params[:status] == 'in_review' %>">
                 <i class="fas fa-clock w-5"></i>
                 <span class="ml-2">In Review</span>
               </div>
               <span class="bg-gray-100 text-gray-600 py-0.5 px-2 rounded-full text-xs"><%= @site.documents.by_status('in_review').count %></span>
             <% end %>
             <%= link_to site_documents_path(@site, status: 'done'), class: "flex items-center justify-between p-2 text-gray-700 hover:bg-gray-50 rounded #{params[:status] == 'done' ? 'bg-gray-100' : ''}" do %>
-              <div class="flex items-center">
+              <div class="flex items-center  <%= "text-primary" if params[:status] == "done" %>">
                 <i class="fas fa-check w-5"></i>
                 <span class="ml-2">Done</span>
               </div>
@@ -33,7 +33,7 @@
         <%= render partial: "shared/filter", locals: { site: @site, documents: @documents, document_categories: @document_categories, total_documents: @total_documents } %>
       </div>
       <div class="px-4 sm:px-0 space-y-0">
-        <div class="bg-white shadow-sm rounded-t-lg px-6 py-4 border-b">
+        <div class="bg-white shadow-sm rounded-t-lg px-6 py-4">
           <h1 class="text-lg font-medium"><%= @site.location %>: <%= @site.name %></h1>
         </div>
         <div class="bg-white shadow-sm rounded-b-lg overflow-visible">
@@ -131,7 +131,7 @@
                           class="hidden w-[125%] min-h-[6em] p-2 border border-gray-300 rounded-md shadow-sm focus:border-primary-500 focus:ring-primary-500"
                         ><%= document.notes %></textarea>
                       </td>
-                      <td class="px-3 py-4 text-sm text-gray-500 relative flex justify-center items-center h-[60px]" data-controller="status" data-document-id="<%= document.id %>">
+                      <td class="px-3 py-4 text-sm text-gray-500 relative text-center h-[60px]" data-controller="status" data-document-id="<%= document.id %>">
                         <button class="text-gray-500 hover:text-gray-700 z-[50]" data-action="status#toggleMenu">
                           <i class="fas fa-ellipsis-v"></i>
                         </button>
@@ -153,7 +153,7 @@
                   <% end %>
                 </tbody>
               </table>
-              <div class="px-6 py-4 border-t">
+              <div class="px-6 py-4 <%= "border-t" if @documents.count > 25 %>">
                 <%= paginate @documents %>
               </div>
             </div>
