ASAP-19 Add routing and summary front end.

--- a/app/views/documents/_modal_content.html.erb
+++ b/app/views/documents/_modal_content.html.erb
@@ -15,12 +15,18 @@
     <!-- Summary View (Previously PDF View) -->
     <div data-modal-target="summaryView">
       <!-- Summary Input Area -->
-      <div class="flex space-x-2 items-start mb-4">
-        <button class="btn btn-primary btn-sm">
-          <i class="fas fa-wand-magic-sparkles mr-1"></i>
-          Summarize Document
-        </button>
-        <p></p>
+      <div data-controller="summarize" data-summarize-document-id-value="<%= document.id %>" class="flex space-x-2 items-start mb-4">
+        <p data-summarize-target="display"><%= document.summary %></p>
+        <% if document.summary.nil? %>
+          <button data-action="click->summarize#getSummary" data-summarize-target="button" class="btn btn-primary btn-sm">
+            <i class="fas fa-wand-magic-sparkles mr-1"></i>
+            Summarize Document
+          </button>
+          <button class="btn btn-primary btn-sm hidden" data-summarize-target="preloader">
+            <span class="loading loading-spinner"></span>
+            Summarizing...
+          </button>
+        <% end %>
       </div>
       <iframe src="<%= document.url %>#pagemode=none&toolbar=1" class="w-full h-[calc(90vh-8rem)]" type="application/pdf"></iframe>
     </div>
