UI for changing AI Model details

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,10 +33,13 @@
               <i class="fas fa-user-circle text-xl"></i>
               <i class="fas fa-chevron-down text-sm"></i>
             </button>
-            <div data-dropdown-target="menu" class="hidden absolute right-0 mt-2 w-48 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5">
+            <div data-dropdown-target="menu" class="hidden absolute right-0 mt-2 w-48 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 z-50">
               <div class="py-1">
                 <%= link_to sites_path, class: "block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" do %>
                   <i class="fas fa-globe mr-2"></i>My Sites
+                <% end %>
+                <%= link_to edit_configuration_path, class: "block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" do %>
+                  <i class="fas fa-wand-magic-sparkles mr-2"></i>AI Settings
                 <% end %>
                 <%= button_to session_path, method: :delete, class: "w-full text-left px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" do %>
                   <i class="fas fa-sign-out-alt mr-2"></i>Logout
