js fixes and readme for lamdba

--- a/app/views/documents/_modal_content.html.erb
+++ b/app/views/documents/_modal_content.html.erb
@@ -1,5 +1,5 @@
 <%= turbo_frame_tag "modal_content_#{document.id}" do %>
-  <div class="flex flex-col space-y-4">
+  <div data-controller="modal" class="flex flex-col space-y-4">
     <!-- Tab Navigation -->
     <div class="tabs tabs-bordered">
       <button data-modal-target="summaryButton" data-action="modal#showSummaryView" class="tab tab-bordered tab-active">
@@ -12,8 +12,8 @@
         History
       </button>
     </div>
-    <!-- Summary View (Previously PDF View) -->
-    <div data-modal-target="summaryView">
+    <!-- Summary View -->
+    <div data-modal-target="summaryView" class="space-y-4">
       <!-- Summary Input Area -->
       <div data-controller="summarize" data-summarize-document-id-value="<%= document.id %>" class="flex space-x-2 items-start mb-4 text-wrap">
         <p data-summarize-target="display"><%= document.summary&.undump %></p>
@@ -31,7 +31,7 @@
       <iframe src="<%= document.url %>#pagemode=none&toolbar=1" class="w-full h-[calc(90vh-8rem)]" type="application/pdf"></iframe>
     </div>
     <!-- PDF Details View -->
-    <div data-modal-target="metadataView" class="hidden h-[calc(90vh-12rem)] overflow-y-auto bg-white rounded-md">
+    <div data-modal-target="metadataView" class="hidden space-y-4">
       <div class="grid grid-cols-1 md:grid-cols-2 gap-6 p-4 mt-4">
         <!-- Document Details -->
         <div>
@@ -117,7 +117,7 @@
       </div>
     </div>
     <!-- History View -->
-    <div data-modal-target="historyView" class="hidden h-[calc(90vh-12rem)] overflow-y-auto">
+    <div data-modal-target="historyView" class="hidden space-y-4">
       <div class="space-y-4 p-4">
         <div class="space-y-4">
           <% document.versions.each do |version| %>
