Revert "js fixes and readme for lamdba"
This reverts commit 1382ffc76467e02dfba05d67c3d2e3e1f4017c3d.

--- a/app/views/documents/_pdf_modal.html.erb
+++ b/app/views/documents/_pdf_modal.html.erb
@@ -1,4 +1,4 @@
-<dialog id="pdf_modal_<%= document.id %>" class="modal">
+<dialog id="pdf_modal_<%= document.id %>" class="modal" data-controller="modal">
   <div class="modal-box w-11/12 max-w-[900px] h-[90vh]">
     <div class="flex flex-col space-y-4">
       <!-- Title and URL Section -->
