--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -89,7 +89,7 @@
                   <td class="px-3 py-4 text-sm w-[40%]" title="<%= document.file_name %>">
                     <div class="flex flex-col gap-1">
                       <div class="text-gray-900"><%= document.file_name&.truncate(80) %></div>
-                      <% source = document_source(document.source) %>
+                      <% source = document_source(document.primary_source) %>
                       <div class="text-gray-400 flex items-center">
                         <%= source[:text] %>
                         <% if source[:url].present? %>
@@ -101,9 +101,17 @@
                     </div>
                   </td>
                   <td class="px-3 py-4 text-sm whitespace-nowrap text-gray-500"><%= document.modification_date&.strftime("%b %d, %Y") %></td>
-                  <td class="px-3 py-4 text-sm text-gray-500 w-32" data-controller="dropdown-edit" data-dropdown-edit-document-id-value="<%= document.id %>" data-dropdown-edit-field-value="document_category">
-                    <div data-action="click->dropdown-edit#showSelect" data-dropdown-edit-target="display" class="cursor-pointer hover:underline">
-                      <%= document.document_category.present? ? document.document_category : "Unknown" %>
+                  <td class="px-3 py-4 text-sm w-32" data-controller="dropdown-edit" data-dropdown-edit-document-id-value="<%= document.id %>" data-dropdown-edit-field-value="document_category">
+                    <div data-action="click->dropdown-edit#showSelect" data-dropdown-edit-target="display" class="cursor-pointer <%= document.document_category.present? && document.document_category != 'Unknown' ? 'text-primary' : 'text-gray-500' %> flex flex-col gap-1">
+                      <div class="hover:underline">
+                        <%= document.document_category.present? ? document.document_category : "Unknown" %>
+                      </div>
+                      <% if document.document_category.present? && document.document_category != "Unknown" && document.document_category_confidence.present? %>
+                        <div class="text-xs text-gray-500 flex items-center gap-1">
+                          <i class="fas fa-wand-magic-sparkles"></i>
+                          <%= number_to_percentage(document.document_category_confidence * 100, precision: 0) %>
+                        </div>
+                      <% end %>
                     </div>
                     <select data-dropdown-edit-target="select" data-action="change->dropdown-edit#updateValue blur->dropdown-edit#hideSelect" class="hidden w-[125%] bg-white border border-gray-300 rounded-md shadow-sm focus:border-primary-500 focus:ring-primary-500 p-2">
                       <% Document::CONTENT_TYPES.each do |key| %>
@@ -126,10 +134,10 @@
                           <%= document.notes.present? ? document.notes : "No notes" %>
                         </div>
                         <textarea
-                          data-text-edit-target="textarea"
-                          data-action="blur->text-edit#updateValue keydown->text-edit#updateValue input->text-edit#adjustHeight"
-                          class="hidden w-[125%] min-h-[6em] p-2 border border-gray-300 rounded-md shadow-sm focus:border-primary-500 focus:ring-primary-500"
-                        ><%= document.notes %></textarea>
+                      data-text-edit-target="textarea"
+                      data-action="blur->text-edit#updateValue keydown->text-edit#updateValue input->text-edit#adjustHeight"
+                      class="hidden w-[125%] min-h-[6em] p-2 border border-gray-300 rounded-md shadow-sm focus:border-primary-500 focus:ring-primary-500"
+                    ><%= document.notes %></textarea>
                       </td>
                       <td class="px-3 py-4 text-sm text-gray-500 relative text-center h-[60px]" data-controller="status" data-document-id="<%= document.id %>">
                         <button class="text-gray-500 hover:text-gray-700 z-[50]" data-action="status#toggleMenu">
